# vlm-from-scratch

./: .gitignore  AttentionMechanism.ipynb  README.md  pyproject.toml
dataloader/: dataloader.py
experiments/: experiments.md
experiments/pretraining/: pretraining.py
src/: optimizer.py  train.py
src/model/: activations.py  loss.py  transformer.py
src/tokenizer/: tokenizer.py  tokenizer_fast.py  utils.py
